--- a/views/cars/createCar.ejs
+++ b/views/cars/createCar.ejs
@@ -1,5 +1,6 @@
 <!-- <h1 class="main-title fs-20 mt-3 mb-0 fw-bold">Add New Car</h1> -->
-
+<h1 class="main-title fs-20 mt-3 mb-0 fw-bold"><%= title%></h1>
+<% include ../messages %> 
 <form action="/cars/create" method="POST">
   <div class="form-card py-3 px-3 mt-3">
     <div class="row">
@@ -50,15 +51,14 @@
         >Foto<span>&#42;</span></label
       >
       <div class="col-md-10">
-        <input       
+        <input
           class="form-control"
           type="text"
           id="formFile"
           name="foto"
-          placeholder="https://placeimg.com/640/480/any"
+          placeholder="/images/image_1.png"
           style="height: 32px"
-          />
-          <!-- placeholder="/images/image_1.png" -->
+        />
         <div id="fileHelp" class="form-text">File size max. 2MB</div>
       </div>
     </div>
