--- a/views/cars/index.ejs
+++ b/views/cars/index.ejs
@@ -21,31 +21,39 @@
 <div class="cars-container">
   <div class="row">
     <!-- Card -->
-    <% for (let data of ListCars){%>
+    <% for (let data of ListCars){%> <% var date=new Date(data.updatedAt) %>
     <div class="col-md-4 mt-4">
       <div class="card">
-        <img src="/images/image_1.png" class="card-img" alt="Car Image" />
+        <img src="<%= data.foto%>" class="card-img" alt="Car Image" />
         <div class="card-body p-0">
-          <h5 class="card-title mt-3 mb-1 fs-14"><%= data.nama%></h5>
+          <h5 class="card-title mt-3 mb-1 fs-14">
+            <%= data.nama%>/<%= data.ukuran%>
+          </h5>
           <p class="card-harga mb-1 fs-16">Rp <%= data.sewa%>/ hari</p>
           <div class="card-info mt-3">
             <div class="info">
               <p class="clock d-flex fs-14">
                 <img class="me-2" src="/images/fi_clock.png" alt="clock icon" />
-                <span class="ml-2">Updated at 4 Apr 2022, 09.00</span>
+                <span class="ml-2"
+                  >Updated at <%= date.getDate() %> <%= date.toLocaleString(
+                  undefined, { month:'short', year:'numeric' } ) %>, <%=
+                  date.toLocaleTimeString(undefined, {hour12: true, hour:
+                  '2-digit' , minute:'2-digit'}) %></span
+                >
               </p>
             </div>
           </div>
         </div>
         <div class="row mt-4">
           <div class="col-md-6">
-            <a
+            <button
+              style="width: 100%"
               class="delete_btn font-weight-bold btn btn-outline-danger d-flex align-items-center justify-content-center"
-              href="/cars/delete/<%= data.id%>"
+              onclick="confirm('<%= data.id%>')"
             >
               <img class="me-2" src="/images/fi_trash-2.png" alt="" />
-              Delete</a
-            >
+              Delete
+            </button>
           </div>
           <div class="col-md-6">
             <a
@@ -59,6 +67,29 @@
         </div>
       </div>
     </div>
+    <script>
+      function confirm(id) {
+        Swal.fire({
+          imageUrl: "../../images/img-BeepBeep.png",
+          title: "Menghapus Data Mobil",
+          text: "Setelah di hapus,data mobil tidak dapat dikembalikan.Yakin ingin menghapus?",
+          showCancelButton: true,
+          confirmButtonColor: "#3085d6",
+          cancelButtonColor: "#d33",
+          cancelButtonText: "Tidak",
+          confirmButtonText: "Ya",
+        }).then((result) => {
+          if (result.isConfirmed) {
+            Swal.fire("Terhapus!", "Data Mobil Terhapus!.", "success");
+            setTimeout(function () {
+              window.location.href = "/cars/delete/<%= data.id%>";
+            }, 1000);
+          } else if (result.dismiss === Swal.DismissReason.cancel) {
+            Swal.fire("Batal Menghapus", "Takut hilang ya?:)", "error");
+          }
+        });
+      }
+    </script>
     <%}%>
   </div>
 </div>
