--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -9,8 +9,8 @@
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
             <div class="user-wrap d-flex align-items-center ms-4 gap-3">
-                <div class="user-icon px-3 py-2 rounded-circle">I</div>
-                <p class="mb-0 fw-normal">Ikadhanny Yudyan Pratama</p>
+                <div class="user-icon px-3 py-2 rounded-circle">IP</div>
+                <p class="mb-0 fw-normal">Ikadhanny yudyan Pratama</p>
                 <img src="/images/Vector_down.png" alt="vector down">
             </div>
         </div>
